@@ -4,6 +4,7 @@ Date: ????
   Minor Features:
     - Add data_api.lua for other mods to control which inserters should be adjustable
   Bugfixes:
+    - Potentially fix error when adjusting inserter being built by space platforms, or due to other mods interfering
     - Fix 16 way inserters not being ignored while 8 way inserters were ignored
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.4
